ksmserver: Only wait for exit sound to *complete* before logout

Previously, `ksmserver` waited for the `exitkde` notification to
finish before calling `startKilling()`. This caused several seconds
of inactivity before applications started exiting.

Now `startKilling()` is called immediately after starting the logout
sound. Once all clients have exited, final session termination is
deferred until the sound finishes playing.

There is currently no visual feedback while the sound is playing, so
the desktop may remain visually static during this period. Improving
the visual feedback can be handled separately.

BUG: 491745
FIXED-IN: 6.8.0